--- a/AmbientReminders/src/package.json
+++ b/AmbientReminders/src/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "googleapis": "^2.1.3",
     "ical": "^0.4.0",
+    "moment": "^2.10.6",
     "underscore": "^1.8.3"
   }
 }
