--- a/AmbientReminders/src/package.json
+++ b/AmbientReminders/src/package.json
@@ -15,6 +15,7 @@
     "googleapis": "^2.1.3",
     "ical": "^0.4.0",
     "moment": "^2.10.6",
+    "node-blink1": "^0.1.6",
     "underscore": "^1.8.3"
   }
 }
