--- a/EyeBlinks/package.json
+++ b/EyeBlinks/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "node-blink1": "^0.2.1",
     "onecolor": "^2.5.0",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "xml2js": "^0.4.12"
   }
 }
