--- a/AmbientReminders/src/package.json
+++ b/AmbientReminders/src/package.json
@@ -18,6 +18,7 @@
     "node-blink1": "^0.1.6",
     "onecolor": "^2.5.0",
     "promise": "^7.0.4",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "node-schedule": "^0.2.9"
   }
 }
