--- a/AmbientReminders/src/package.json
+++ b/AmbientReminders/src/package.json
@@ -20,5 +20,6 @@
     "promise": "^7.0.4",
     "underscore": "^1.8.3",
     "node-schedule": "^0.2.9"
-  }
+  },
+  "engines" : { "node" : ">=0.11.6" }
 }
