--- a/AmbientReminders/src/package.json
+++ b/AmbientReminders/src/package.json
@@ -20,7 +20,8 @@
     "promise": "^7.0.4",
     "underscore": "^1.8.3",
     "node-schedule": "^0.2.9",
-    "later": "^1.2.0"
+    "later": "^1.2.0",
+    "command-line-args": "2.1.6"
   },
   "engines" : { "node" : ">=0.11.6" }
 }
