--- a/AmbientReminders/src/package.json
+++ b/AmbientReminders/src/package.json
@@ -22,7 +22,8 @@
     "node-schedule": "^0.2.9",
     "later": "^1.2.0",
     "command-line-args": "2.1.6",
-    "edge": "5.0.0"
+    "lame": "1.2.3",
+    "speaker": "0.3.0"
   },
-  "engines" : { "node" : ">=0.11.6" }
+  "engines" : { "node" : ">=0.12.0" }
 }
